Fix Safari's Blurred Text

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -15,6 +15,7 @@ img,legend{border:0}legend,td,th{padding:0}html{font-family:sans-serif;-ms-text-
     font-style: normal;
     font-weight: normal;
     text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
 }
 
 @font-face {
@@ -27,6 +28,7 @@ img,legend{border:0}legend,td,th{padding:0}html{font-family:sans-serif;-ms-text-
     font-style: italic;
     font-weight: normal;
     text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
 }
 
 @font-face {
@@ -39,6 +41,7 @@ img,legend{border:0}legend,td,th{padding:0}html{font-family:sans-serif;-ms-text-
     font-style: normal;
     font-weight: bold;
     text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
 }
 
 @font-face {
@@ -51,6 +54,7 @@ img,legend{border:0}legend,td,th{padding:0}html{font-family:sans-serif;-ms-text-
     font-style: italic;
     font-weight: bold;
     text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
 }
 
 /*!
